--- a/src/app/invadd/invadd.component.html
+++ b/src/app/invadd/invadd.component.html
@@ -1,25 +1,26 @@
 <h1>Add Products</h1>
 <h3>Input fields below, upload image file, and then click <b>Submit</b> to add a new product.</h3>
 <div class = formcontainer>
-<form >
+<form  #itemForm="ngForm" >
   <div class = "topfield">
-    <input type="text" placeholder="Enter product name..." size="50" >
+    <input type="text" placeholder="Enter product name..." size="50" ngModel name = "ProductName" required>
   </div>
   <div class = "inputfield">
-    <input type="text" placeholder="Enter product description..." size="50">
+    <input type="text" placeholder="Enter product description..." size="50" ngModel name = "ProductDisc" required>
   </div>
   <div class = "inputfield">
-    <input type="text" placeholder="Enter product price..." size="50">
+    <input type="text" placeholder="Enter product price..." size="50" ngModel name = "ProductPrice" required>
   </div>
   <div class = "inputfield">
-    <input type="text" placeholder="Enter product category..." size="50">
+    <input type="text" placeholder="Enter product category..." size="50" ngModel name = "ProductCat" required>
   </div>
   <div class = "inputfield">
-    <input type="text" placeholder="Enter product quantity..." size="50">
+    <input type="text" placeholder="Enter product quantity..." size="50" ngModel name = "ProductQuant" required>
   </div>
-  <div class = "bottomfield">
-    <input type="file">
-    <button type="submit" class="submitbtn">Submit</button>
+  <div class = "inputfield">
+    <input type="text" placeholder="Enter product image description..." size="50" ngModel name = "ProductImg" required>
+    <br>
+    <button type="submit" color = "accent" class="submitbtn">Submit</button>
   </div>
 </form>
 </div>
