updated readme and start command

--- a/src/app/invadd/invadd.component.html
+++ b/src/app/invadd/invadd.component.html
@@ -20,7 +20,7 @@
   <div class = "inputfield">
     <input type="text" placeholder="Enter product image description..." size="50" ngModel name = "ProductImg" required>
     <br>
-    <button type="submit" color = "accent" class="submitbtn">Submit</button>
+    <button type="submit" class="submitbtn">Submit</button>
   </div>
 </form>
 </div>
