--- a/src/app/invadd/invadd.component.css
+++ b/src/app/invadd/invadd.component.css
@@ -11,6 +11,7 @@
   background: var(--color-light);
   border-radius: var(--card-border-radius);
   box-shadow: var(--card-shadow);
+  width: 80%;
 }
 
 .bottomfield {
@@ -21,6 +22,7 @@
 }
 
 .submitbtn {
+  top:1rem;
   border-radius: var(--card-border-radius);
   color: black;
   padding: 8px 16px;
