fixed mime type error i think

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <!-- ICONS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- STYLESHEET -->
-  <link rel="stylesheet" href="/inv_dash.css">
+  <!-- <link rel="stylesheet" href="/inv_dash.css"> -->
 </head>
 
 <body>
