Made table fullscreen, updated column head

--- a/src/app/invview/invview.component.html
+++ b/src/app/invview/invview.component.html
@@ -10,7 +10,7 @@
               <th>Price</th>
               <th>Category</th>
               <th>Image</th>
-              <th>Quantity</th>
+              <th>Availability</th>
             </tr>
           </thead>
           <tbody>
