--- a/src/app/invadd/invadd.component.css
+++ b/src/app/invadd/invadd.component.css
@@ -1,4 +1,4 @@
-.topfield {
+/* .topfield {
   padding: 2rem 2rem 1rem;
 }
 
@@ -28,4 +28,28 @@
   cursor: pointer;
   margin-bottom: 1rem;
   margin-right: 2rem;
+}
+ */
+
+
+ .example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+td {
+  padding-right: 8px;
+}
+
+.formcontainer {
+  margin-top: 2rem;
+  background: var(--color-light);
+  border-radius: var(--card-border-radius);
+  box-shadow: var(--card-shadow);
+  width: 80%;
 }
