Updated onAddItem ts function, fixed some styles

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -37,15 +37,16 @@ aside .sidebar {
 
 /*Description next to icons*/
 aside .sidebar h3 {
+  font-family: 'Poppins', sans-serif;
   font-weight: 500;
+  font-size: 14px;
 }
 
 /*For each row item in the sidebar*/
 aside .sidebar a {
-  display:flex;
+  display: flex;
   gap: 0.5rem;
   margin-left: 1rem;
-  align-items: center;
   position: relative;
   height: 3.7rem;
   transition: all 300ms ease;
