--- a/src/app/invadd/invadd.component.html
+++ b/src/app/invadd/invadd.component.html
@@ -29,12 +29,12 @@
     </mat-form-field>
   </div>
 
-  <div class = "inputfield">
+  <!-- <div class = "inputfield">
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Product Quantity</mat-label>
       <textarea matInput ngModel name="ProductQuant"></textarea>
     </mat-form-field>
-  </div>
+  </div> -->
 
   <div class = "inputfield">
     <mat-form-field class="example-full-width" appearance="fill">
@@ -46,7 +46,7 @@
   <div class = "inputfield">
     <mat-label>Product Status</mat-label>
   <br>
-  <mat-slide-toggle>Slide me!</mat-slide-toggle>
+  <mat-slide-toggle [(ngModel)]="isChecked" name="availability">Slide me!</mat-slide-toggle>
   </div>
 
   <div class = "bottomfield">
