--- a/src/app/middlesection/middlesection.component.css
+++ b/src/app/middlesection/middlesection.component.css
@@ -160,6 +160,20 @@
   background-color: white;
   border-radius: 5px;
 }
+#availability-toggle {
+  display: none;
+}
+#availability-toggle.active{
+  display: table-cell;
+}
+
+#availability-content {
+  display: none;
+}
+#availability-content.active{
+  display: table-cell;
+}
+
 .del-btn:hover, .edit-btn:hover{
   background-color: yellow;
 }
@@ -170,3 +184,42 @@
 #delete.active, #edit.active{
   display:table-cell;
 }
+/*
+.prevent-click.active{
+  position:fixed;
+  min-height: 100%;
+  min-width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.confirm-del{
+  display: none;
+  background-color: white;
+  padding: 10px;
+  border: #FFDB58 5px;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,.05),0 1px 0 rgba(255,255,255,.075);
+}
+
+.confirm-del.active{
+  position:fixed;
+  left: 500px;
+  top: 200px;
+  display: block;
+  z-index: 1;
+}
+.yes-btn{
+  background-color: green;
+}
+.no-btn{
+  background-color: red;
+}
+.yes-btn, .no-btn{
+  margin: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 50px;
+  font: 1em sans-serif;
+  color: white;
+}*/
