--- a/src/app/middlesection/middlesection.component.html
+++ b/src/app/middlesection/middlesection.component.html
@@ -32,11 +32,24 @@
             <td>{{product.price}}</td>
             <td>{{product.category}}</td>
             <td>{{product.image}}</td>
-            <td>{{product.availability}}</td>
-            <td id="delete" class=""><button class="del-btn" (click)="onDeleteProduct(product._id)"><span class="material-icons">delete</span></button></td>
+            <td id="availability-content" class="active">{{product.availability}}</td>
+            <td id="availability-toggle" class="">
+              <mat-slide-toggle [checked]="product.availability === 'Available' ? true : false" (change)="(toggleAvailability(product))" ></mat-slide-toggle>
+            </td>
+            <td id="delete" class="">
+              <button class="del-btn" (click)="onDeleteProduct(product._id, product.name)"><span class="material-icons">delete</span></button>
+            </td>
             <td id="edit" class=""><button class="edit-btn"><span class="material-icons">edit</span></button></td>
           </tr>
       </tbody>
+      <!--
+      <div class="prevent-click"></div>
+      <div class="confirm-del active">
+        <h2>Are you sure to remove the item?</h2>
+        <button class="yes-btn">Yes</button>
+        <button class="no-btn">No</button>
+      </div>
+      --->
     </table>
 </div>
 
