--- a/src/app/invadd/invadd.component.html
+++ b/src/app/invadd/invadd.component.html
@@ -46,7 +46,7 @@
   <div class = "inputfield">
     <mat-label>Product Status</mat-label>
   <br>
-  <mat-slide-toggle [(ngModel)]="isChecked" name="availability">Availabile?</mat-slide-toggle>
+  <mat-slide-toggle [(ngModel)]="isChecked" name="availability">Available?</mat-slide-toggle>
   </div>
 
   <div class = "bottomfield">
