--- a/src/app/middlesection/middlesection.component.css
+++ b/src/app/middlesection/middlesection.component.css
@@ -1,3 +1,114 @@
+.top-bar {
+  display: flex;
+  flex-direction: row;
+  background-color: #FFDB58;
+  padding: 5px;
+  align-items: center;
+}
+
+.top-bar .search-form {
+  background-color: white;
+  vertical-align: top;
+  align-items: center;
+  padding: 4px;
+  border-radius: var(--card-border-radius);
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.top-bar .search-form .search-btn > span {
+  border-width: 4px;
+  font-size: 27px;
+}
+
+.top-bar .search-btn {
+  display: inline;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.top-bar input[type='text'] {
+  padding: 6px;
+  margin-right: 5px;
+  border: none;
+  font-size: 15px;
+  vertical-align: top;
+  background-color: transparent;
+}
+
+.top-bar a .add-product {
+  background-color: white;
+  padding: 5px;
+  border-radius: 10px;
+  margin-right: 5px;
+}
+
+.top-bar a .add-product > span{
+  font-size: 27px;
+}
+
+.top-bar .edit-inventory{
+  background-color: white;
+  padding: 5px;
+  border-radius: 10px;
+  margin-right: 0px;
+  cursor: pointer;
+}
+
+.top-bar .edit-inventory.active{
+  background-color: yellow;
+}
+
+
+.del-btn, .edit-btn{
+  cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: white;
+  border-radius: 5px;
+}
+#availability-toggle {
+  display: none;
+}
+#availability-toggle.active{
+  display: table-cell;
+}
+
+#availability-content {
+  display: none;
+}
+#availability-content.active{
+  display: table-cell;
+}
+
+.del-btn:hover, .edit-btn:hover{
+  background-color: yellow;
+}
+#delete, #edit{
+  display: none;
+  transition: all 300ms ease-in-out;
+}
+#delete.active, #edit.active{
+  display:table-cell;
+}
+
+h1 {
+  font-weight: 800;
+  font-size: 1.8rem;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 0;
+  padding: 1rem 1rem 0;
+}
+
+h3 {
+  font-size: 0.87rem;
+  font-family: 'Poppins', sans-serif;
+  padding: 0 1rem 0;
+}
+
+
+/*Styles from old dashboard below*/
+
 .middle-part {
   margin-top: 1.4rem;
 }
@@ -96,94 +207,6 @@
   border: none;
 }
 
-
-.top-bar {
-  display: flex;
-  flex-direction: row;
-  background-color: #FFDB58;
-  padding: 5px;
-  align-items: center;
-}
-.top-bar .search-form {
-  background-color: white;
-  vertical-align: top;
-  align-items: center;
-  padding: 4px;
-  border-radius: var(--card-border-radius);
-  margin-right: 5px;
-  margin-left: 5px;
-}
-.top-bar .search-form  .search-btn > span {
-  border-width: 4px;
-  font-size: 27px;
-}
-.top-bar .search-btn {
-  display:inline;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.top-bar input[type='text'] {
-  padding: 6px;
-  margin-right: 5px;
-  border: none;
-  font-size: 15px;
-  vertical-align: top;
-  background-color: transparent;
-}
-.top-bar a .add-product {
-  background-color: white;
-  padding: 5px;
-  border-radius: 10px;
-  margin-right: 5px;
-}
-.top-bar a .add-product > span{
-  font-size: 27px;
-}
-.top-bar .edit-inventory{
-  background-color: white;
-  padding: 5px;
-  border-radius: 10px;
-  margin-right: 0px;
-  cursor: pointer;
-}
-
-.top-bar .edit-inventory.active{
-  background-color: yellow;
-}
-
-
-.del-btn, .edit-btn{
-  cursor: pointer;
-  margin-left: 5px;
-  margin-right: 5px;
-  background-color: white;
-  border-radius: 5px;
-}
-#availability-toggle {
-  display: none;
-}
-#availability-toggle.active{
-  display: table-cell;
-}
-
-#availability-content {
-  display: none;
-}
-#availability-content.active{
-  display: table-cell;
-}
-
-.del-btn:hover, .edit-btn:hover{
-  background-color: yellow;
-}
-#delete, #edit{
-  display: none;
-  transition: all 300ms ease-in-out;
-}
-#delete.active, #edit.active{
-  display:table-cell;
-}
 /*
 .prevent-click.active{
   position:fixed;
