--- a/src/app/middlesection/middlesection.component.css
+++ b/src/app/middlesection/middlesection.component.css
@@ -4,6 +4,7 @@
   background-color: #FFDB58;
   padding: 5px;
   align-items: center;
+  justify-content: space-between;
 }
 
 .top-bar .search-form {
@@ -14,6 +15,7 @@
   border-radius: var(--card-border-radius);
   margin-right: 5px;
   margin-left: 5px;
+  display: flex;
 }
 
 .top-bar .search-form .search-btn > span {
@@ -55,7 +57,7 @@
   cursor: pointer;
 }
 
-.top-bar .edit-inventory.active{
+.top-bar a .edit-inventory.active{
   background-color: yellow;
 }
 
