Added function to extract search string (middlesection.ts line 71)

--- a/src/app/middlesection/middlesection.component.css
+++ b/src/app/middlesection/middlesection.component.css
@@ -29,7 +29,7 @@
   cursor: pointer;
 }
 
-.top-bar input[type='text'] {
+.top-bar input[type='search'] {
   padding: 6px;
   margin-right: 5px;
   border: none;
