--- a/src/app/middlesection/middlesection.component.html
+++ b/src/app/middlesection/middlesection.component.html
@@ -10,7 +10,7 @@
       <span class="material-icons" >search</span>
     </button>
   </form>
-  <a routerLink="/add-products"><div class="add-product"><span class="material-icons">add</span></div></a>
+  <div class="add-product" (click)="onCreate()"><span class="material-icons">add</span></div>
   <div class="edit-inventory" id="edit-inv" (click)="onEditInventory()"><span class="material-icons">edit</span></div>
 </div>
 </div>
