--- a/src/app/middlesection/middlesection.component.css
+++ b/src/app/middlesection/middlesection.component.css
@@ -178,6 +178,7 @@ h3 {
 
 .middle-part .inventory-table {
   margin-top: 2.37rem;
+  display: block;
 }
 
 .middle-part .inventory-table table {
@@ -208,6 +209,30 @@ h3 {
 .middle-part table tbody tr:last-child td {
   border: none;
 }
+
+
+/*Styles for "Product cannot be found" message below.*/
+#cannotFind{
+  margin: auto;
+  padding: 1rem;
+  display: none;
+}
+
+#cannotFind .view-products{
+  background-color: #F6F6F9;
+  color: rgb(238, 152, 136);
+  text-align: center;
+  box-shadow: none;
+}
+
+#cannotFind h2{
+  font-family: 'Poppins', sans-serif;
+}
+
+#cannotFind span{
+  color: rgb(238, 152, 136);
+}
+/*Product cannot be found ends here.*/
 
 /*
 .prevent-click.active{
