--- a/src/app/middlesection/middlesection.component.html
+++ b/src/app/middlesection/middlesection.component.html
@@ -14,7 +14,7 @@
   <div class="edit-inventory" id="edit-inv" (click)="onEditInventory()"><span class="material-icons">edit</span></div>
 </div>
 </div>
-<div class="inventory-table">
+<div class="inventory-table" id="invTable">
     <table>
       <thead>
         <tr>
@@ -52,6 +52,16 @@
       </div>
       --->
     </table>
+</div>
+
+<div class="action-cards" id="cannotFind">
+  <a (click)="dismissMessage()">
+    <div class="view-products">
+      <span class="material-icons">production_quantity_limits</span>
+      <h2> Product cannot be found. </h2>
+      (Click here to return and dismiss message.)
+    </div>
+  </a>
 </div>
 
 
