--- a/src/app/middlesection/middlesection.component.css
+++ b/src/app/middlesection/middlesection.component.css
@@ -38,14 +38,22 @@
   background-color: transparent;
 }
 
-.top-bar a .add-product {
+.top-bar .refresh-inventory{
+  background-color: white;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.top-bar .add-product {
   background-color: white;
   padding: 5px;
   border-radius: 10px;
   margin-right: 5px;
+  cursor: pointer;
 }
 
-.top-bar a .add-product > span{
+.top-bar .add-product > span{
   font-size: 27px;
 }
 
