--- a/src/app/prodedit/prodedit.component.html
+++ b/src/app/prodedit/prodedit.component.html
@@ -1,88 +1,70 @@
-<h1>Edit Product Info</h1>
-<h3>Modify fields below and then click <b>Save Changes</b> to save.</h3>
+<div class="top-bar">
+  <mat-dialog-actions >
+    <button mat-stroked-button mat-dialog-close>X</button>
+  </mat-dialog-actions>
 
-<div class = formcontainer>
-<form  #itemForm="ngForm">
-  <div class = "topfield">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Enter Product Name *</mat-label>
-      <input matInput [(ngModel)]="this.tempProduct.name" name = "ProductName">
-    </mat-form-field>
-  </div>
-
-  <table class="example-full-width" cellspacing="25"><tr>
-    <td><mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Price *</mat-label>
-      <span matPrefix>₱&nbsp;</span>
-      <input type="number" min="0.01" step="0.01" matInput [(ngModel)]="this.tempProduct.price" name = "ProductPrice">
-    </mat-form-field></td>
-    <td><mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Category</mat-label>
-      <input matInput [(ngModel)]="this.tempProduct.category" name = "ProductCat">
-    </mat-form-field></td>
-  </tr></table>
-
-  <div class = "inputfield">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Product Description</mat-label>
-      <textarea matInput placeholder="Ex. Humot haha" [(ngModel)]="this.tempProduct.description" name="ProductDisc"></textarea>
-    </mat-form-field>
-  </div>
-
-  <!-- <div class = "inputfield">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Product Quantity</mat-label>
-      <textarea matInput ngModel name="ProductQuant"></textarea>
-    </mat-form-field>
-  </div> -->
-
-  <div class = "inputfield">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Upload Image</mat-label>
-      <textarea matInput [(ngModel)]="this.tempProduct.image" name = "ProductImg"></textarea>
-    </mat-form-field>
-  </div>
-
-  <div class = "inputfield">
-    <mat-label>Product Status</mat-label>
-  <br>
-  <mat-slide-toggle [(ngModel)]="isChecked" name="availability">Available?</mat-slide-toggle>
-  </div>
-
-  <div class = "bottomfield">
-  <button mat-raised-button color="accent" class="submitbtn" (click)="onSaveChanges()">Save Changes</button>
-  </div>
-
-</form>
+  <h1>Edit Products</h1>
+  <h3>Input fields below and then click <b>Save Changes</b> to save.</h3>
 </div>
 
-<!--
-<h1>Add Products</h1>
-<h3>Input fields below and then click <b>Submit</b> to add a new product.</h3>
-<div class = formcontainer>
-<form  #itemForm="ngForm">
-  <div class = "topfield">
-    <input type="text" placeholder="Enter product name..." size="50" ngModel name = "ProductName" required>
-  </div>
-  <div class = "inputfield">
-    <input type="text" placeholder="Enter product description..." size="50" ngModel name = "ProductDisc" required>
-  </div>
-  <div class = "inputfield">
-    <input type="text" placeholder="Enter product price..." size="50" ngModel name = "ProductPrice" required>
-  </div>
-  <div class = "inputfield">
-    <input type="text" placeholder="Enter product category..." size="50" ngModel name = "ProductCat" required>
-  </div>
-  <div class = "inputfield">
-    <input type="text" placeholder="Enter product quantity..." size="50" ngModel name = "ProductQuant" required>
-  </div>
-  <div class = "inputfield">
-    <input type="text" placeholder="Enter product image description..." size="50" ngModel name = "ProductImg" required>
-  </div>  
-  <div class = "bottomfield">
-    <button type="submit" color = "accent" class="submitbtn" (click)="onAddItem(itemForm)">Submit</button>
-  </div>
-</form>
-</div>
+<mat-dialog-content>
+  <form #itemForm="ngForm" autocomplete="off">
+    
+    <div class="top-fields">
 
--->
+      <mat-form-field appearance="outline" >
+        <mat-label>Name</mat-label>
+        <input matInput [(ngModel)]="this.tempProduct.name" name = "ProductName">
+      </mat-form-field>
+      
+      <mat-form-field appearance="outline" style="float: right;">
+        <mat-label>Price</mat-label>
+        <span matPrefix>₱&nbsp;</span>
+        <input type="number" min="0.01" step="0.01" matInput [(ngModel)]="this.tempProduct.price" name = "ProductPrice" required>
+      </mat-form-field>
+
+    </div>
+
+    <div class="mid-fields">  
+      
+      <img id="prdImg" src="https://via.placeholder.com/250">
+
+      <mat-form-field appearance="outline">
+        <mat-label>Category</mat-label>
+        <mat-select matInput [(ngModel)]="this.tempProduct.category" name = "ProductCat" required> 
+          <mat-option value="Option 1">Option 1</mat-option>
+          <mat-option value="Option 2">Option 2</mat-option>
+        </mat-select>
+      </mat-form-field>      
+
+      <mat-form-field appearance="outline">
+        <mat-label>Description</mat-label>
+        <textarea matInput placeholder="Product Description" [(ngModel)]="this.tempProduct.description" name="ProductDisc" required></textarea>
+      </mat-form-field>
+
+      <button mat-stroked-button id="upldBtn" >Upload Image</button>
+
+      <div id="status">
+        <mat-label>Status</mat-label>
+      </div>
+      <mat-slide-toggle [(ngModel)]="isChecked" name="availability">Available?</mat-slide-toggle>
+      
+
+    </div>
+     <!--  need it for now to add item since upload image is not yet done. just uncomment to add item
+      <mat-form-field appearance="outline">
+        <mat-label>Upload Image</mat-label>
+        <textarea matInput ngModel name = "ProductImg"></textarea>
+      </mat-form-field>
+ -->
+    </form> 
+
+    <div class="bottom-bar">
+
+      <mat-dialog-actions>
+        <button mat-stroked-button (click)="onSaveChanges()">Save Changes</button>
+      </mat-dialog-actions>
+  
+    </div>
+
+  </mat-dialog-content>
