Created display inventory components

--- a/src/app/middlesection/middlesection.component.html
+++ b/src/app/middlesection/middlesection.component.html
@@ -3,7 +3,7 @@
   <h1>Inventory</h1>
   <h3> Hello <b>Romel</b>, what would you like to do today?</h3>
 </div>
-<div style="display: flex;">
+<!-- <div style="display: flex;">
   <form class="search-form">
     <input type="text" placeholder="Search">
     <button class="search-btn">
@@ -12,8 +12,10 @@
   </form>
   <a routerLink="/add-products"><div class="add-product"><span class="material-icons">add</span></div></a>
   <div class="edit-inventory" id="edit-inv" (click)="onEditInventory()"><span class="material-icons">edit</span></div>
+</div> -->
 </div>
-</div>
+<app-tabledisplay></app-tabledisplay>
+<!-- 
 <div class="inventory-table">
     <table>
       <thead>
@@ -42,7 +44,7 @@
             </td>
             <td id="edit" class=""><button class="edit-btn"><span class="material-icons">edit</span></button></td>
           </tr>
-      </tbody>
+      </tbody> -->
       <!--
       <div class="prevent-click"></div>
       <div class="confirm-del active">
@@ -51,8 +53,8 @@
         <button class="no-btn">No</button>
       </div>
       --->
-    </table>
-</div>
+    <!-- </table>
+</div> -->
 
 
 <!-- old design
