--- a/src/app/displayInvCom/tabledisplay/tabledisplay.component.html
+++ b/src/app/displayInvCom/tabledisplay/tabledisplay.component.html
@@ -12,10 +12,10 @@
     </form> -->
     
     <div>
-    <button mat-raised-button (click)="onCreate()">
+    <button mat-raised-button (click)="onCreate()" id="on-create-btn">
         <mat-icon>add</mat-icon>
     </button>
-    <button mat-raised-button (click)="onEditInventory()">
+    <button mat-raised-button (click)="onEditInventory()" id="edit-inventory-btn">
         <mat-icon>edit</mat-icon>
     </button>
     </div>
@@ -54,7 +54,7 @@
         </ng-container>
         <!--Edit Evintory Shown-->
         <ng-container matColumnDef="availabilityToggle">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Availability</th>
+            <th mat-header-cell *matHeaderCellDef>Availability</th>
             <td mat-cell *matCellDef="let element"><mat-slide-toggle [checked]="element.availability === 'Available' ? true : false" (change)="(toggleAvailability(element))" ></mat-slide-toggle></td>
         </ng-container>
         
