--- a/src/app/displayInvCom/tabledisplay/tabledisplay.component.html
+++ b/src/app/displayInvCom/tabledisplay/tabledisplay.component.html
@@ -45,7 +45,10 @@
         <!-- Image column -->
         <ng-container matColumnDef="image">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Image</th>
-            <td mat-cell *matCellDef="let element"> {{element.image}} </td>
+            <!-- <td mat-cell *matCellDef="let element" > {{element.imagePath}} </td> -->
+            <mat-cell *matCellDef="let element">
+                <img [src]="element.imagePath" />
+            </mat-cell>
         </ng-container>
         <!-- Availability column -->
         <ng-container matColumnDef="availability">
