storeinfo on going

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
       <span class="material-icons">shopping_bag</span>
       <h3>Inventory</h3>
     </a>
-    <a href="#">
+    <a routerLink="store-info">
       <span class="material-icons">phone</span>
       <h3>Store Information</h3>
     </a>
