--- a/src/app/invadd/invadd.component.html
+++ b/src/app/invadd/invadd.component.html
@@ -39,6 +39,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Category</mat-label>
         <mat-select matSelect ngModel name = "ProductCat" required > 
+          <mat-option value="None">None</mat-option>
           <mat-option *ngFor="let cat of categoryList" value="{{cat.name}}">{{cat.name}}</mat-option>
         </mat-select>
       </mat-form-field>      
