--- a/src/app/prodedit/prodedit.component.html
+++ b/src/app/prodedit/prodedit.component.html
@@ -27,11 +27,12 @@
 
     <div class="mid-fields">  
       
-      <img id="prdImg" src="https://via.placeholder.com/250">
+      <img id="prdImg" [src]="this.tempProduct.imagePath">
 
       <mat-form-field appearance="outline">
         <mat-label>Category</mat-label>
         <mat-select matInput [(ngModel)]="this.tempProduct.category" name = "ProductCat" required> 
+          
           <mat-option *ngFor="let cat of categoryList" [value] = "cat">{{cat.name}}</mat-option>
         </mat-select>
       </mat-form-field>      
