--- a/src/app/prodedit/prodedit.component.html
+++ b/src/app/prodedit/prodedit.component.html
@@ -27,7 +27,7 @@
 
     <div class="mid-fields">  
       
-      <img id="prdImg" [src]="this.tempProduct.imagePath">
+      <img id="prdImg" [src]="this.imagePrev">
 
       <mat-form-field appearance="outline">
         <mat-label>Category</mat-label>
@@ -55,8 +55,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Upload Image</mat-label>
         <textarea matInput ngModel name = "ProductImg"></textarea>
-      </mat-form-field>
- -->
+      </mat-form-field>-->
     </form> 
 
     <div class="bottom-bar">
