--- a/src/app/storeinfo/storeinfo.component.html
+++ b/src/app/storeinfo/storeinfo.component.html
@@ -6,85 +6,24 @@
 </div>
 
 <div class="display">
+  <div>
     <h1>Store Details</h1>
     <h3>Display store information here</h3>
- </div>
-
-<mat-stepper orientation="vertical">
-
-    <form #itemForm="ngForm" autocomplete="off">
-
-            <mat-step>
-                <ng-template matStepLabel>Contact Number</ng-template>
-                <ng-template matStepContent>
-                        <mat-form-field class="input-field" appearance="fill">
-                          <mat-label>Telephone</mat-label>
-                          <span matPrefix>+32 &nbsp;</span>
-                          <input type="tel" matInput placeholder="555-555-1234">
-                          <mat-icon matSuffix>mode_edit</mat-icon>
-                        </mat-form-field>
-    
-                        <mat-form-field class="input-field" appearance="fill">
-                            <mat-label>Cellphone</mat-label>
-                            <span matPrefix>+63 &nbsp;</span>
-                            <input type="tel" matInput placeholder="123456789">
-                            <mat-icon matSuffix>mode_edit</mat-icon>
-                          </mat-form-field>
-    
-                  <button mat-button matStepperNext>Next</button>
-                </ng-template>
-              </mat-step>
-    
-              <mat-step>
-                <ng-template matStepLabel>Address</ng-template>
-                <ng-template matStepContent>
-                    <mat-form-field class="input-field" appearance="fill">
-                        <mat-label>Street Address</mat-label>
-                        <input matInput placeholder="Enter">
-                        <mat-icon matSuffix>mode_edit</mat-icon>
-                      </mat-form-field>
-    
-                      <mat-form-field class="input-field" appearance="fill">
-                        <mat-label>City</mat-label>
-                        <input matInput placeholder="Enter">
-                        <mat-icon matSuffix>mode_edit</mat-icon>
-                      </mat-form-field>
-    
-                      <mat-form-field class="input-field" appearance="fill">
-                        <mat-label>State/Province</mat-label>
-                        <input matInput placeholder="Enter">
-                        <mat-icon matSuffix>mode_edit</mat-icon>
-                      </mat-form-field>
-    
-                      <mat-form-field class="input-field" appearance="fill">
-                        <mat-label>Zip/Postal Code</mat-label>
-                        <input matInput placeholder="Enter">
-                        <mat-icon matSuffix>mode_edit</mat-icon>
-                      </mat-form-field>
-    
-                  <button mat-button matStepperPrevious>Back</button>
-                  <button mat-button matStepperNext>Next</button>
-                </ng-template>
-              </mat-step>
-    
-              <mat-step>
-                <ng-template matStepLabel>Other Details</ng-template>
-                <mat-form-field class="input-field" appearance="fill">
-                    <mat-label>Other details</mat-label>
-                    <textarea matInput placeholder="Input other store information"></textarea>
-                  </mat-form-field>
-              </mat-step>
-
-              <mat-step>
-                <ng-template matStepLabel>Done</ng-template>
-                <p>You are now done.</p>
-                <div>
-                    <button mat-button matStepperPrevious>Back</button>
-                    <button mat-button >Reset</button>
-                    <button mat-button >Save Details</button>
-                </div>
-              </mat-step>
-    </form>
-    
-  </mat-stepper>
+  </div>
+  <div>
+  <button mat-raised-button id="on-edt-btn" (click)="onEdit()">
+    <mat-icon>edit</mat-icon>
+  </button>
+  </div>
+</div>
+<div>
+  <pre *ngFor="let info of this.storeInfo">
+    Cellphone Num : {{this.storeInfo[0].cellphone}}
+    City          : {{this.storeInfo[0].city}}
+    Details       : {{this.storeInfo[0].details}}
+    State         : {{this.storeInfo[0].state}}
+    Street Address: {{this.storeInfo[0].streetAdd}}
+    Telephone     : {{this.storeInfo[0].telephone}}
+  </pre>
+</div>
 
