--- a/src/app/storeinfo/storeinfo.component.css
+++ b/src/app/storeinfo/storeinfo.component.css
@@ -43,3 +43,13 @@
 button{
     height: 100%;
 }
+
+.inventory-table {
+  color: var(--color-dark);
+  background: var(--color-white);
+  width: 100%;
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  box-shadow: var(--card-shadow);
+  transition: all 300ms ease;
+}
