--- a/src/app/storeinfo/storeinfoedit/storeinfoedit.component.html
+++ b/src/app/storeinfo/storeinfoedit/storeinfoedit.component.html
@@ -1,12 +1,14 @@
-
 <div class="top-bar">
-    <mat-dialog-actions >
-      <button mat-stroked-button mat-dialog-close>X</button>
-    </mat-dialog-actions>
-  
-    <h1>Edit Store Info</h1>
-    <h3>Input fields below and then click <b>Save Changes</b> to save.</h3>
-  </div>
+  <mat-dialog-actions >
+    <button mat-stroked-button mat-dialog-close>X</button>
+  </mat-dialog-actions>
+
+  <h1>Edit Store Info</h1>
+  <h3>Input fields below and then click <b>Save Changes</b> to save.</h3>
+</div>
+
+<mat-dialog-content>
+
 <mat-stepper orientation="horizontal" #stepper>
 
     <form #itemForm="ngForm" autocomplete="off">
@@ -85,3 +87,4 @@
     
   </mat-stepper>
 
+</mat-dialog-content>
