edited sidebar, added login component + route (/login)

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -25,5 +25,9 @@
       <span class="material-icons">visibility</span>
       <h3>Overview</h3>
     </a>
+    <a href = "#">
+      <span class="material-icons">logout</span>
+      <h3>Logout</h3>
+    </a>
   </div>
 </aside>
