--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,15 @@
 <body>
   <div class="container">
     <!--============ SIDEBAR (LEFT) ============-->
-    <app-sidebar></app-sidebar>
+    <div *ngIf="!router.url.includes('login')" class="sidebar"> <!--Hide sidebar if on login page (localhost:4200/login)-->
+      <app-sidebar></app-sidebar>
+    </div>
     <!--============ MIDDLE (MAIN) SECTION ============-->
     <div class="middle-part">
       <router-outlet></router-outlet>
     </div>
     <!--============ RIGHT SECTION "sidesection"  ============-->
-    <!-- removed for now since the scripting was done in javascript and not typescript -->
+    <!-- removed for now since unnecessary and the scripting was done in javascript and not typescript -->
     <!--============ END OF RIGHT SECTION ============-->
   </div>
   <script src="/inv_dash.js"></script>
