--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -82,3 +82,10 @@ aside .sidebar a:hover {
 aside .sidebar a:hover span {
   margin-left: 1rem;
 }
+
+/*Log out nav separated from other navs*/
+aside .sidebar a:last-child {
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+}
