--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
       <span class="material-icons">visibility</span>
       <h3>Overview</h3>
     </a>
-    <a href = "#">
+    <a href = #>
       <span class="material-icons">logout</span>
       <h3>Logout</h3>
     </a>
