--- a/src/app/layouts/default-layout/default-layout.component.html
+++ b/src/app/layouts/default-layout/default-layout.component.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <!--============ SIDEBAR (LEFT) ============-->
-    <div *ngIf="!router.url.includes('login')" class="sidebar"> <!--Hide sidebar if on login page (localhost:4200/login)-->
+    <div class="sidebar"> 
       <app-sidebar></app-sidebar>
     </div>
     <!--============ MIDDLE (MAIN) SECTION ============-->
