--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,10 @@
 <div class ="login-container">
+    <img src="./assets/store_9.jpg" class="bg-img1">
+    <img src="./assets/cart_4.jpg" class="bg-img2">
+    <!-- credits: 
+        <a href="https://www.freepik.com/vectors/ecommerce">Ecommerce vector created by bs_k1d - www.freepik.com</a>
+        <a href="https://www.freepik.com/vectors/phone-shop">Phone shop vector created by bs_k1d - www.freepik.com</a>
+    -->
     <div class="login-card">
 
         <div class="top-bar">
@@ -9,7 +15,7 @@
 
         <div class="greeting"><h1>Welcome!</h1></div>
         <div class="subhead"><h3>Please enter your username and password, then click <b>Login</b> to continue.</h3></div>
-        <form #itemForm="ngForm" autocomplete="off">    
+        <form #itemForm="ngForm" autocomplete="off" class="login-form">    
             <div class="username-field">
                 <mat-form-field appearance="outline">
                     <mat-label>Username</mat-label>
