--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,17 +9,25 @@
 </head>
 
 <body>
+  
+  <app-cusnav></app-cusnav> 
+
+<!-- COMMENTED FOR NOW TO MAKE CUSTOMER SIDE THE DEFAULT HOMEPAGE
+
   <div class="container">
-    <!--============ SIDEBAR (LEFT) ============-->
+    ============ SIDEBAR (LEFT) ============
     <app-sidebar></app-sidebar>
-    <!--============ MIDDLE (MAIN) SECTION ============-->
+    ============ MIDDLE (MAIN) SECTION ============
     <div class="middle-part">
       <router-outlet></router-outlet>
     </div>
-    <!--============ RIGHT SECTION "sidesection"  ============-->
-    <!-- removed for now since the scripting was done in javascript and not typescript -->
-    <!--============ END OF RIGHT SECTION ============-->
+    ============ RIGHT SECTION "sidesection"  ============
+     removed for now since the scripting was done in javascript and not typescript
+    ============ END OF RIGHT SECTION ============
   </div>
+-->
+  
+
   <script src="/inv_dash.js"></script>
 </body>
 </html>
