customer components in a separate folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet>
+ -->
+
+ <html lang="en">
+     <head>
+         <meta charset="utf-8">
+         <title>Angular-Formatted Inventory</title>
+
+         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+     </head>
+     <body>
+         <app-cusnav></app-cusnav>
+         <script src="/inv_dash.js"></script>
+     </body>
+ </html>
