--- a/src/app/sidesection/sidesection.component.html
+++ b/src/app/sidesection/sidesection.component.html
@@ -1,4 +1,4 @@
-<div class="right">
+<!-- <div class="right">
   <div class="right-top">
     <button id="toggle-sidebar">
       <span class="material-icons">menu</span>
@@ -23,4 +23,4 @@
    placeholder="Click here and begin typing to write down notes.."
    spellcheck="false">
  </textarea>
-</div>
+</div> -->
