customer layout unfinished

--- a/src/app/_customer/cusnav/cusnav.component.html
+++ b/src/app/_customer/cusnav/cusnav.component.html
@@ -1,20 +1,43 @@
-<aside>
+
   <div class="topbar">
       <div class="logo">
         <img src="./assets/romels_yellow_nocart.png">
       </div>
-      <mat-form-field class="search">
+
+      <div class="nav-links">
+
+        <a href="customer/#">
+          <span class="material-icons">home</span>
+          <div><h3>Home</h3></div>
+         </a>
+ 
+         <a routerLink="shop">
+           <span class="material-icons">shopping_bag</span>
+           <div><h3>Shop</h3></div>
+         </a>
+
+         <a href="customer/#">
+          <span class="material-icons">phone</span>
+          <div><h3>Details</h3></div>
+        </a>
+
+        <a href="customer/#">
+          <span class="material-icons">shopping_cart</span>
+          <div><h3>Cart</h3></div>
+        </a>
+      </div>
+   
+        
+
+       
+  </div>
+
+
+   <!--    <mat-form-field class="search">
           <input type="text" matInput placeholder="Search product">
-      </mat-form-field>
-      <a href="#">
-          <h3>Home</h3>
-        </a>
-        <a href="#">
-          <h3>All Products</h3>
-        </a>
-        <a href="#">
-          <h3>Categories</h3>
-        </a> 
-    </div>
-        <span class="material-icons">shopping_bag</span>
-</aside>
+      </mat-form-field> -->
+      
+      
+        
+ 
+  
