--- a/src/app/layouts/customer-layout/customer-layout.component.html
+++ b/src/app/layouts/customer-layout/customer-layout.component.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-  <div class="container">
+  <div>
     <!--============ SIDEBAR (LEFT) ============-->
-    <div class="sidebar"> 
-      <app-customer-sidebar></app-customer-sidebar>
-    </div>
+  
+      <app-cusnav></app-cusnav>
+   
     <!--============ MIDDLE (MAIN) SECTION ============-->
     <div class="middle-part">
-      <router-outlet></router-outlet>
+      <!-- <router-outlet></router-outlet> -->
     </div>
   </div>
 </body>
