--- a/src/app/_customer/cusnav/cusnav.component.css
+++ b/src/app/_customer/cusnav/cusnav.component.css
@@ -1,32 +1,54 @@
 /*Will contain logo and close sign.*/
-aside .topbar {
+.topbar {
     background: var(--color-yellow);
     display: flex;
+    
     align-items: baseline;
     justify-content: space-between;
     margin: 0;
-    height: 10rem;
+    height: 8rem;
+    
   }
 
-  aside .logo img {
-    margin-left: 3rem;
-    float: center;
-    height: 6rem;
-  }
-
-  a {
-	line-height: 4;
-   
-	color: rgb(0, 0, 0);
-	font-weight: bolder;
-	text-decoration: none;
-	margin-left: 20px;
-	position: relative;
-	top: 48px;
-	left: -920px;
+.topbar .logo img {
+  
+  display: flex;
+  margin-left: 1rem;
+  height: 4.2rem;
 }
 
-a:hover {
+.topbar .nav-links{
+  position: absolute;
+  height: 4.2rem;
+  top: 8%;
+  left: 50%;
+	transform: translate(-50%,-50%);
+ 
+}
+
+.topbar .nav-links a{
+  float: left;
+	text-align: center;
+	padding: 0 30px;
+  transition: all 300ms ease;
+  
+}
+
+.topbar .nav-links a .material-icons{
+  width: 100%;
+	font-size: 34px;
+	transition: 0.5s; /* adding the transition to make it more attractive */
+	color: #000;
+}
+
+.topbar h3{
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.topbar .nav-links a:hover .material-icons{
+  transform: translateY(-10%);
 	color: white;
 }
 
@@ -39,9 +61,3 @@ a.active {
     width: 50%;
 }
 
-.material-icons {
-  position: absolute;
-  top: 94px;
-  left: 1164px;
-  font-size: 3rem;
-}
