--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 
      </head>
      <body>
-         <app-cusnav></app-cusnav>
-         <script src="/inv_dash.js"></script>
+         <app-customer-layout></app-customer-layout>
+         <!--<script src="/inv_dash.js"></script> -->
      </body>
  </html>
